UI changes + app now finds user location

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,21 @@
     <title>E-scoot-app</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="text/javascript">
+      function initialize() {
+        var map = new google.maps.Map(
+          document.getElementById("map-canvas"),
+          mapOptions
+        );
+
+        // Resize stuff...
+        google.maps.event.addDomListener(window, "resize", function () {
+          var center = map.getCenter();
+          google.maps.event.trigger(map, "resize");
+          map.setCenter(center);
+        });
+      }
+    </script>
     <div id="root"></div>
   </body>
 </html>
