Geocode to address
geocodes are now reversed to addresses in input fields.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <title>E-scoot-app</title>
+    <title>Scootlator</title>
   </head>
   <body>
     <script type="text/javascript">
