--- a/public/index.html
+++ b/public/index.html
@@ -19,21 +19,7 @@
     <title>Scootlator</title>
   </head>
   <body>
-    <script type="text/javascript">
-      function initialize() {
-        var map = new google.maps.Map(
-          document.getElementById("map-canvas"),
-          mapOptions
-        );
-
-        // Resize stuff...
-        google.maps.event.addDomListener(window, "resize", function () {
-          var center = map.getCenter();
-          google.maps.event.trigger(map, "resize");
-          map.setCenter(center);
-        });
-      }
-    </script>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%&libraries=places"></script>
   </body>
 </html>
